# PortalApp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  apps.yaml  docker-compose.yml  pyproject.toml  requirements.txt
src/portal_app/: __init__.py  cli.py  config.py  docker_client.py  health.py
src/portal_app/web/: app.py
src/portal_app/web/static/: style.css
src/portal_app/web/templates/: base.html  index.html
